For more detailed instructions on filling in the ChangeLog form, see 
`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

******************************************************************************
post-6.2 release changes: 

2003-08-28  Kevin Layer  <layer@crikey>
2.4.1

	* fi-sublisp.el,
	* fi-subproc.el,
	* fi-utils.el:
	- bug13275: new variable fi::started-via-file which
	  is set to `t' in fi:start-interface-via-file.  This was
	  separated from fi:connect-to-windows since it's reaelly a
	  different thing.
	- bug13546: fi::subprocess-watch-for-special-commands: handle
	  (in-package #:foo)

	* fi-keys.el (fi:super-paren): bug13181: fi:super-paren: at end of
	  comment, would loop infinitely (until ^G)

	* fi-xemacs.el: bug12467: fix problems with 21.4

2003-08-19  Kevin Layer  <layer@crikey>

	* Makefile: fi-vers.el change not put into makefile!

2003-08-14  Kevin Layer  <layer@crikey>
2.4.0

	* fi-keys.el: improve fi:subprocess-beginning-of-line for
	  non-prompt lines
	* local.mak: add examples/eval.el
	* (NEW) examples/eval.el: from Bill_Clementson@jdedwards.com
	* doc/eli.htm: add missing stuff

	* (NEW) README: internal info
	* fi-keys.el,
	* fi-lep.el,
	* fi-site-init.el,
	* fi-vers.el: internalize (fi::) a few external variables (fi:)

2003-08-14  Kevin Layer  <layer@crikey>

	* fi-basic-lep.el: parameterize the *CL-temp* buffer name (not
	  used by anything yet)
	* fi-keys.el: fix minor problems with bindings, found while
	  revamping eli.htm to contain newest info.

2003-08-12  Kevin Layer  <layer@crikey>

    for rfe5611:
	* fi-basic-lep.el: make fi:pop-up-temp-window-behavior value of
	  '(minibuffer) work more as expected.  Evaluations send their
	  output to the minibuffer, when possible, the *CL-Temp* buffer
	  when it's too large.
	* fi-keys.el: